<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settingsHeader"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/settingsHeader"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/gridSizeRadioGroup"
        android:layout_width="277dp"
        android:layout_height="154dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridSizeHeader"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/tenByTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenByTenTurnsLabel"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/fourteenByFourteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourteenByFourteenTurnsLabel"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/eighteenByEighteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eighteenByEighteenTurnsLabel"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/gridSizeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/gridSizeHeader"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsHeader" />

    <TextView
        android:id="@+id/soundEffectsHeader"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:text="@string/soundEffectsHeader"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridSizeRadioGroup" />

    <Switch
        android:id="@+id/soundSwitch"
        android:layout_width="123dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:textOn="@string/soundOn"
        android:textOff="@string/soundOff"
        app:showText="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundEffectsHeader" />

    <ImageView
        android:id="@+id/boxGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="201dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxBlue"
        app:layout_constraintTop_toBottomOf="@+id/soundSwitch"
        app:srcCompat="@drawable/box_green" />

    <ImageView
        android:id="@+id/boxRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boxYellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxGreen"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/box_red" />

    <ImageView
        android:id="@+id/boxYellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boxRed"
        app:layout_constraintTop_toBottomOf="@+id/boxGreen"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/box_yellow" />

    <ImageView
        android:id="@+id/boxBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/boxGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundSwitch"
        app:srcCompat="@drawable/box_blue" />

</androidx.constraintlayout.widget.ConstraintLayout>